# vc-sm-dfjsp-paper

./: .gitignore  .tmp_ablation_analysis.py  _tmp_ablation_analysis.py
sm_dfjsp/: paper_extracted.txt  pyproject.toml
sm_dfjsp/configs/: dataset_spec.yaml  experiment.yaml  experiment_mk1_5.yaml  experiment_smoke.yaml
sm_dfjsp/docs/: ALGO_MAPPING.md  ChatGPT-构造FJSP实例扩展.md  EDA_TS_复现说明文档.md  EDA_TS_覆盖性整改说明_2026-05-13.md  HV_NORMALIZATION.md  IGD_NORMALIZATION.md  MK13_跨链逻辑整改方案_2026-05-14.md  MODEL_EQ_MAPPING.md  MVC_MK05_2TYPE_3VC_6SRU_生成说明.md  MVC_RIGOROUS_20SEED_EXPERIMENTS_LINUX.md  MVC_SM_DFJSP_HV归一化说明_2026-06-16.md  MVC_SM_DFJSP_Nature_论文新初稿_2026-06-21.docx  MVC_SM_DFJSP_Nature_论文新初稿_2026-06-21.md  MVC_SM_DFJSP_Nature_论文新初稿_2026-06-21.tex  MVC_SM_DFJSP_Nature风格论文初稿_2026-06-11.md  MVC_SM_DFJSP_patent_draft.docx  MVC_SM_DFJSP_patent_value_chain_2026-06-16.docx  MVC_SM_DFJSP_patent_value_chain_2026-06-16.md  MVC_SM_DFJSP_两目标论文执行方案_2026-05-28.md  MVC_SM_DFJSP_代码实现步骤与未实现清单_2026-05-12.md  MVC_SM_DFJSP_双目标论文方法实现文档_2026-06-07.md  MVC_SM_DFJSP_双目标项目修改实施方案与清单_2026-06-07.md  MVC_SM_DFJSP_后续完善工作清单_2026-06-11.md  MVC_SM_DFJSP_小规模验证说明_2026-06-15.md  MVC_SM_DFJSP_相关论文整理_2026-06-07.md  MVC_SM_DFJSP_论文初稿_2026-05-15.md  MVC_SM_DFJSP_论文构造与整体实现新方案_2026-05-12.md  REPRO_REPORT.md  SM_DFJSP_mk01_15_复现计划.md  SM_DFJSP_复现清单_除实例差异.md  SM_DFJSP_完整复现执行文档.md  SM_DFJSP_当前复现进度与严格复现差距说明_2026-04-28.md  SM_DFJSP_执行后完成清单_除实例差异.md  SM_DFJSP_论文对比文档.md  SM_DFJSP_项目总览与维护记录_2026-05-11.md  SM_DFJSP_项目整理与删除候选清单_2026-05-11.md  SM_DFJSP_项目文件说明_2026-05-28.md  ~$C_SM_DFJSP_Nature_论文新初稿_2026-06-21.docx
(+539 files in other folders)
