[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-dfjsp-reproduction"
version = "0.1.0"
description = "Reproduction of SM-DFJSP with EDA-TS and baselines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
solver = ["gurobipy>=11.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".pytest_cache", "pytest-cache-files-*", "reports"]

